# beads

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  beads.go  default.nix  go.mod  go.sum  install.ps1
.beads/: beads.jsonl  issues.jsonl
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
cmd/bd/: autoflush.go  cli_fast_test.go  compact.go  create.go  daemon.go  daemon_server.go  daemon_sync_branch.go  deletion_tracking.go  direct_mode.go  doctor.go  doctor_test.go  helpers_test.go  hooks.go  import.go  import_mtime_test.go  import_multipart_id_test.go  info.go  init.go  init_test.go  main.go  main_test.go  message.go  migrate.go  migrate_issues.go  nodb.go  nodb_test.go  prime.go  setup.go  show.go  sync.go  sync_local_only_test.go  validate.go  version.go  worktree_test.go
cmd/bd/doctor/: claude.go  claude.md  gitignore.go  legacy.go  perf.go
cmd/bd/setup/: claude.go  claude_test.go  constants.go  cursor.go  utils.go
cmd/bd/templates/hooks/: post-checkout  post-merge  pre-commit  pre-push
commands/: prime.md
docs/: ADVANCED.md  AGENT_MAIL_DEPLOYMENT.md  AGENT_MAIL_MULTI_WORKSPACE_SETUP.md  CLAUDE.md  FAQ.md  INSTALLING.md  RELEASING.md  TROUBLESHOOTING.md
examples/claude-code-skill/references/: CLI_REFERENCE.md
examples/git-hooks/: README.md
examples/go-agent/: README.md  go.mod  main.go
integrations/beads-mcp/: pyproject.toml
integrations/beads-mcp/src/beads_mcp/: __init__.py  mail.py  mail_tools.py
integrations/beads-mcp/tests/: test_mail.py
internal/beads/: beads.go
internal/configfile/: configfile.go  configfile_test.go
internal/rpc/: protocol.go  rpc_test.go  server_issues_epics.go  server_routing_validation_diagnostics.go  version_test.go
internal/storage/sqlite/: bench_helpers_test.go  compact_bench_test.go  cycle_bench_test.go  schema.go  schema_probe.go  schema_probe_test.go  sqlite.go  sqlite_bench_test.go
internal/testutil/fixtures/: fixtures.go  fixtures_test.go
internal/utils/: id_parser.go  id_parser_test.go  issue_id.go
npm-package/: package.json
scripts/: README.md  agent-mail-status.sh  release.sh  setup-agent-mail-workspace.sh  start-agent-mail-server.sh  stop-agent-mail-server.sh  update-homebrew.sh
(+1 files in other folders)
